# EasyMaaS

./: .gitignore  README.md  README_EN.md  pyproject.toml
docs/: cli_reference.md  openai_api_format.md  usage_guide.md  why_easymaas.md
docs/en/: cli_reference.md  openai_api_format.md  usage_guide.md  why_easymaas.md
src/easymaas/: __init__.py
src/easymaas/cli/: commands.py
src/easymaas/config/: __init__.py  templates.py
src/easymaas/core/: config.py  decorators.py  models.py
src/easymaas/server/: app.py
